@@ -2,13 +2,12 @@ package com.example.demo.data;
 
 import com.example.demo.record.Dish;
 
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
 public class DishTestData {
-    public static final List<Dish> DISH_LIST = Arrays.asList(
+    public static final List<Dish> DISHES = List.of(
             new Dish("pork", false, 800, Dish.Type.MEAT),
             new Dish("beef", false, 700, Dish.Type.MEAT),
             new Dish("chicken", false, 400, Dish.Type.MEAT),
@@ -20,7 +19,7 @@ public class DishTestData {
             new Dish("salmon", false, 450, Dish.Type.FISH)
     );
 
-    public static final List<Dish> SPECIAL_DISH_LIST = Arrays.asList(
+    public static final List<Dish> SPECIAL_DISHES = List.of(
             new Dish("season fruit", true, 120, Dish.Type.OTHER),
             new Dish("prawns", false, 300, Dish.Type.FISH),
             new Dish("rice", true, 350, Dish.Type.OTHER),
@@ -30,15 +29,15 @@ public class DishTestData {
 
     public static final Map<String, List<String>> DISH_TAGS = new HashMap<>() {
         {
-            put("pork", Arrays.asList("greasy", "salty"));
-            put("beef", Arrays.asList("salty", "roasted"));
-            put("chicken", Arrays.asList("fried", "crisp"));
-            put("french fries", Arrays.asList("greasy", "fried"));
-            put("rice", Arrays.asList("light", "natural"));
-            put("season fruit", Arrays.asList("fresh", "natural"));
-            put("pizza", Arrays.asList("tasty", "salty"));
-            put("prawns", Arrays.asList("tasty", "roasted"));
-            put("salmon", Arrays.asList("delicious", "fresh"));
+            put("pork", List.of("greasy", "salty"));
+            put("beef", List.of("salty", "roasted"));
+            put("chicken", List.of("fried", "crisp"));
+            put("french fries", List.of("greasy", "fried"));
+            put("rice", List.of("light", "natural"));
+            put("season fruit", List.of("fresh", "natural"));
+            put("pizza", List.of("tasty", "salty"));
+            put("prawns", List.of("tasty", "roasted"));
+            put("salmon", List.of("delicious", "fresh"));
         }
     };
 }
