@@ -2,13 +2,12 @@ package com.example.demo.data;
 
 import com.example.demo.record.Transaction;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static com.example.demo.data.TraderTestData.*;
 
 public class TransactionTestData {
-    public static final List<Transaction> TRANSACTIONS = Arrays.asList(
+    public static final List<Transaction> TRANSACTIONS = List.of(
             new Transaction(BRIAN, 2011, 300),
             new Transaction(RAOUL, 2012, 1000),
             new Transaction(RAOUL, 2011, 400),
@@ -16,4 +15,6 @@ public class TransactionTestData {
             new Transaction(MARIO, 2012, 700),
             new Transaction(ALAN, 2012, 950)
     );
+
+    public static final List<String> REFERENCE_CODES = List.of("a12", "C14", "b13");
 }
